# upperroom

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  Dockerfile  MANIFEST.in  Makefile  README.md  crontab  docker-compose.yml  entrypoint.sh  gunicorn.conf  gunicorn.py  nginx.conf  pyproject.toml  requirements.txt  setup.cfg  setup.py  uwsgi.ini  version.py
.deploy/: 50unattended-upgrades  50unattended-upgrades.jessie  boto_fix.patch  build_python.sh  cloudwatch_logger.py  create_user.sh  git-hook-checkout  init_aws.sh  init_django.sh  init_exim.sh  log_upload  logrotate_django  logrotate_nginx  logrotate_nginx.jessie  nginx.conf.in  profile  rsyslog_django.conf  run.in  user-data.sh
.env_development/: DB_ENGINE  DB_NAME
.env_production/: DB_ENGINE  DB_NAME  EMAIL_BACKEND  MEDIAFILES_BUCKET  STATICFILES_BUCKET  VHOST
.env_testing/: BACKUP_BUCKET  DB_ENGINE  DB_NAME  MEDIAFILES_BUCKET  STATICFILES_BUCKET  VHOST
.github/workflows/: docker.yml  release.yml
apps/directory/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
apps/directory/migrations/: 0001_initial.py  0002_expand_family_street.py  0002_localise_strings.py  0003_expand_email.py
apps/members/: apps.py  signals.py  urls.py  views.py
apps/newsletter/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
apps/newsletter/migrations/: 0001_initial.py  0002_expand_issue_mime_type.py  0002_localise_strings.py  0003_fix_publication_field.py  0004_set_on_delete.py
apps/pages/: urls.py
apps/pages/migrations/: 0001_initial.py
apps/resources/: about.py  admin.py  apps.py  context_processors.py  hilight.py  middleware.py  models.py  signals.py  urls.py  views.py
apps/resources/migrations/: 0001_initial.py  0002_remove_tags_null_attribute.py  0002_show_date.py  0003_expand_attachment_mime_type.py  0004_add_attachment_slug.py  0004_localise_strings.py  0005_set_attachment_slug.py  0005_set_on_delete.py  0006_set_attachment_slug_unique.py
apps/roster/: __init__.py  admin.py  apps.py  models.py  signals.py  urls.py  views.py
apps/roster/migrations/: 0001_initial.py  0002_expand_roletype_verb.py  0002_roletype_add_times.py  0003_localise_strings.py  0003_remove_people_null_attribute.py  0004_set_on_delete.py
apps/roster/templatetags/: roster_filters.py
apps/splash/: admin.py  context_processors.py
directory/: admin.py  models.py  urls.py  views.py
directory/templates/directory/: anniversary_list.html  birthday_list.html  family.html  family_letter.html  index.html
docs/: Podcast Audio.md
members/: __init__.py  apps.py  signals.py  urls.py  views.py
members/templates/members/: create.html  create_form.html  generic.html  ops.html  portal.html
members/templates/registration/: login.html  password_change_done.html  password_reset_confirm.html  password_reset_form.html
newsletter/: __init__.py  models.py  signals.py  urls.py
newsletter/migrations/: 0001_initial.py  0002_initialdata.py
newsletter/templates/newsletter/: index.html
pages/: urls.py
pages/migrations/: 0001_initial.py
pages/static/style/: titlepage.css
pages/templates/pages/: calendar.html  contact.html
resources/: __init__.py  admin.py  models.py  views.py
resources/templates/resources/: about.html  base.html  resource_detail.html  resource_list.html
roster/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
roster/management/commands/: sendrosteremails.py
roster/migrations/: 0001_initial.py  0002_initialdata.py
roster/templates/roster/: index.html  meeting.html  person_event.ics  person_list.html  person_task.ics
thepoint/: __init__.py  __main__.py  asgi.py  commands.py  settings.py  sitemaps.py  urls.py  wsgi.py
thepoint/apps/directory/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
thepoint/apps/extendedsites/: apps.py  context_processors.py  models.py
thepoint/apps/members/: apps.py  signals.py  urls.py  views.py
thepoint/apps/newsletter/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
thepoint/apps/pages/: apps.py  urls.py
thepoint/apps/resources/: admin.py  apps.py  context_processors.py  feeds.py  middleware.py  models.py  signals.py  urls.py  views.py
thepoint/apps/roster/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
thepoint/apps/splash/: admin.py  apps.py  context_processors.py  models.py
thepoint/directory/: admin.py  apps.py  forms.py  models.py  portals.py  signals.py  views.py
thepoint/extendedsites/: apps.py  context_processors.py  models.py
thepoint/members/: apps.py  portals.py  signals.py  urls.py  views.py
thepoint/newsletter/: admin.py  apps.py  models.py  portals.py  urls.py  views.py
thepoint/resources/: admin.py  apps.py  feeds.py  models.py  signals.py  urls.py  views.py
thepoint/roster/: admin.py  apps.py  forms.py  models.py  views.py
thepoint/splash/: apps.py  context_processors.py  signals.py
thepoint/utils/: apps.py  func.py
thepoint/weblog/: admin.py  apps.py  models.py  models.py.  urls.py  views.py
upperroom/: __init__.py  commands.py  settings.py  urls.py  wsgi.py
upperroom/directory/: admin.py  apps.py  forms.py  models.py  portals.py  signals.py  tasks.py  urls.py  utils.py  views.py
upperroom/extendedsites/: admin.py  apps.py  context_processors.py  models.py  signals.py
upperroom/members/: apps.py  middleware.py  portals.py  urls.py  views.py
upperroom/newsletter/: apps.py  models.py  views.py
upperroom/resources/: admin.py  apps.py  context_processors.py  featureditem.py  feeds.py  middleware.py  models.py  signals.py  views.py
upperroom/roster/: admin.py  apps.py  forms.py  models.py  portals.py  tasks.py  urls.py  utils.py  views.py
upperroom/search/: apps.py  managers.py  urls.py  views.py
upperroom/splash/: admin.py  apps.py  models.py  signals.py
upperroom/utils/: apps.py  markdown.py  media.py  mime.py  tasks.py
upperroom/weblog/: admin.py  apps.py  models.py  portals.py  signals.py  views.py
util/: mixin.py
util/logging/: handlers.py
util/storages/: backends.py
(+414 files in other folders)
