[project]
name = "upperroom"
version = "3.3.5"
description = "A website for Churches."
license = "GPL-2.0-only"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Craig Holyoak", email = "craig@helmsdeep.org"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "argon2-cffi (>=25.1.0)",
    "bcrypt (>=5.0.0)",
    "django (>=6.0.2,<6.1.0)",
    "django-environ (>=0.12.0)",
    "django-markdownify (>=0.9.6)",
    "django-robots (>=6.1)",
    "mutagen (>=1.47.0)",
    "PyYAML (>=6.0.3)",
    "uWSGI (>=2.0.31)",
    "uwsgi-tools (>=1.1.1)",
    "weasyprint (>=66.0,<69.0)",
    "yafg (>=0.3)",
]

[project.urls]
homepage = "https://github.com/thepointchurch/upperroom"
repository = "https://github.com/thepointchurch/upperroom"

[project.scripts]
upperroom = "upperroom.commands:main"
upperroom-sendrosteremails = "upperroom.commands:sendrosteremails"
upperroom-restore-fixtures = "upperroom.commands:restore_fixtures"

[project.optional-dependencies]
aws = [
    "cryptography>=46.0.5",
    "django-amazon-ses>=4.0.1",
    "django-storages>=1.14.6",
]
cache = [
    "django-cacheops>=7.2",
    "django-redis>=6.0.0",
]
google = [
    "google-api-python-client>=2.190.0",
    "google-auth-oauthlib>=1.2.4",
]
pgsql = [
    "psycopg[binary]>=3.3.2",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "coverage>=7,<8",
    "django-debug-toolbar>=6,<7",
    "gitpython>=3,<4",
    "isort>=6",
    "pre-commit>=4,<5",
    "pylint>=3,<4",
    "pylint-django>=2,<3",
    "pytest>=8,<9",
    "pytest-django>=4,<5",
    "python-lsp-server>=1,<2",
    "semantic_version>=2,<3",
    "tomlkit>=0,<1",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""
source-exclude = [
    "**/tests.py",
    "**/tests",
]
wheel-exclude = [
    "**/tests.py",
    "**/tests",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"


[tool.pylint.master]
jobs = 0
load-plugins = [
    "pylint_django",
]
django-settings-module = "upperroom.settings"

[tool.pylint.format]
max-line-length = 119

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "duplicate-code",
]

[tool.pylint.variables]
ignored-argument-names = "kwargs|args"


[tool.isort]
combine_as_imports = true
include_trailing_comma = true
known_first_party = "upperroom"
line_length = 119
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


[tool.black]
line-length = 119
include = '\.pyi?$'


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
DJANGO_SETTINGS_MODULE = "upperroom.settings"
python_files = "tests.py tests/*.py"
filterwarnings = [
    "ignore::DeprecationWarning:yafg",
    "ignore::SyntaxWarning:yafg",
]


[tool.pylsp-mypy]
enabled = false
