[metadata]
name = thepoint
version = attr: version.get_version
license_file = LICENSE
description = A Django project for The Point Church's website.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thepointchurch/thepoint
author = Craig Holyoak
author_email = craig@helmsdeep.org
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
python_requires = >= 3.7
packages = find:
scripts =
    bin/thepoint-backup
    bin/thepoint-manage
    bin/thepoint-restore
    bin/thepoint-sendrosteremails
install_requires =
    Django >= 3.0
    django-storages

[flake8]
max-complexity = 10
max-line-length = 119

[isort]
combine_as_imports = true
include_trailing_comma = true
known_first_party = thepoint
line_length = 99
multi_line_output = 5
